try to fix font-size jumps on mobile.

--- a/stadsarkiv_client/static/css/search.css
+++ b/stadsarkiv_client/static/css/search.css
@@ -32,13 +32,16 @@ details>summary.inactive {
     cursor: unset;
 }
 
+summary {
+    font-size: 1.05rem;
+}
+
 .facets details {
     border-radius: 5px;
     box-shadow: var(--box-shadow);
 }
 
 .facets ul {
-    font-size: 1.05rem;
     list-style: none;
     padding-left: 0;
     margin-top: 0;
